# simple_calculator_minus_rust

./: Cargo.toml
src/: main.rs
